--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-    <div class="main"><h1>To trip revers</h1></div>
+    <div class="main"><h1>Try to replicate this</h1></div>
    <div class="parent">
         <ol class="boxstart">
         <li><div class="box box1"></div></li>
