--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
     <title>FILE</title>
 </head>
 <body>
+    <div class="color">
 <div class="rotat-page2">
     <div class="x-asis">
         <div class="box child1"></div>
@@ -22,9 +23,13 @@
         <div class="box child5"></div>
         <div class="box child6"></div>
     </div>
+    <div class="ancer2">
+        <div class="ancer"><a href="./car.html">Lets go and try another things</a></div>
+    </div>
 </div>
-    <div class="main-ancer"><div class="ancer"><a href="./car.html">next3</a></div></div>
+</div>
+
 </body>
-</div>
+
 
 </html>
